Accessibility: changed color of inline code to fix contrast ratio for a11y

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -395,7 +395,7 @@ li.task-list-item {
 :not(pre)>code {
   background-color: #eef9ff !important;
   border-radius: 0.3125rem !important;
-  color: #0282c9 !important;
+  color: #0175b4 !important;
   padding: 0.2rem 0.4rem !important;
   font-weight: normal !important;
 }
